@@ -3,6 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2012-01-06 (SVN):
+    * timidity, load_instrument(): Close the file before returning in
+      error cases.
+    * updated beta date stamp to 2012-01-06.
+
 2012-01-05 (SVN):
     * Recompiled all win64 dlls and import libraries.
     * quakedef.h: updated beta date stamp to 2012-01-05.
